fix on mobile

--- a/src/app/public/components/search-box/search-box.component.scss
+++ b/src/app/public/components/search-box/search-box.component.scss
@@ -49,7 +49,14 @@ form {
   z-index: 10;
   padding: 10px;
 
-  box-shadow: $box-shadow-sm;
+  box-shadow: $box-shadow;
+
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+
+  max-height: 400px;
+  overflow: hidden;
+  overflow-y: auto;
 
   pr-archive-small:not(:last-child) {
     margin-bottom: 10px;
@@ -86,23 +93,33 @@ form {
 
 :host.search-box-active {
   background: $PR-blue;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   height: 100px;
   width: auto;
-  z-index: 100;
+  z-index: 5;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0px 5px;
 
+  @media screen and (min-width: 801px) {
+    width: 800px;
+    margin: 0 auto;
+    left: auto;
+    right: auto;
+  }
+
   .search-box-input {
     display: block;
     flex: 1 1 auto;
     margin-right: 5px;
+  }
 
+  .search-box-button {
+    display: flex;
   }
 
   .search-box-button, 
@@ -117,5 +134,9 @@ form {
     top: 100px;
     left: 0;
     right: 0;
+    max-height: calc(100vh - 100px);
+    border-radius: 0;
+    overflow: hidden;
+    overflow-y: auto;
   }
 }
